# spare-tire

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spare_tire/: __init__.py  cli.py  patch.py  rename.py
src/spare_tire/server/: __init__.py  app.py  html.py  stream.py
src/third_wheel/: __init__.py  cli.py  patch.py
src/third_wheel/server/: __init__.py  app.py  config.py  html.py  stream.py  upstream.py
src/wheel_rename/: __init__.py  cli.py  download.py  rename.py
src/wheel_rename/server/: __init__.py  app.py  html.py  stream.py  upstream.py
tests/: test_config.py  test_dual_install.py  test_icechunk_integration.py  test_integration.py  test_patch.py  test_rename.py  test_server.py
tests/fixtures/dual-install/: README.md  pyproject.toml
